lab1/Test/L1-A-13-67.output
Error Type B at Line 1
Error Type B at Line 6
Error Type B at Line 10
Error Type A at Line 18
Error Type B at Line 24
Error Type B at Line 31
Error Type B at Line 36
