lab1/Test/L1-A-13-67.cmm
int , dYnt [ 2104145096 ] 

;
float ;
int ;
int dTsbDKZGg7s6p3HT ( struct <= IFtsmE7_d4DNb {
  struct H1sML b5wkyjllICZpK5mCu9pu ;
}bnK , struct ndvk QjOSm ) {
  int vvLKo ;
  int int OrFMz , oTtidiDEl ;
}
int X76tREp ( ) {
  struct {
  }U = Osx1dCzN_Hn ;
  if ( cDq6ph3rg )   return oC || ieecpx3eiEX != WSDhivZ4QZglUNiC19R 
    + - ( c4VxOCmO = Uka = h_c9jpaoXbI2b && NTtuVTCAo0zPQE9dPt0 
    > Ls - WlSriGJU1rosvJSkPUS / ! tdsVYjx ( zZYVd , BG5jVjHD6zA78iN 
    [ TVakvFHikluGnb9t && cPO1BxaYUIFQcDXCo1n \<= Pg9ugObaAxI 
    * eUG5 ( a9j == 1456257077 ) . ISowOUb < 486824449.1057929264 
    >= cYcro ] * rFiPzHowfE4 ( ) . Qpw1bBz0bqU7JrFp ) 
    ) ;

}
!= int pjDOnpZ5UB0O58fRDcv ( ) {
  ygDiQoB_7_IunTyXie ;
  Kg9yua ;
  fSoq5T ;
  if ( fm )   if ( IPtv9dRCXAL94Es )   OT4_Q ;
else {
  }
else   if ( jBtw2yfE )   while ( float iCcawbe0T3_Pbx 
    )   NEe7gQx2ZVW 



}
